changed generat settings tab to account / svg wrapper in header for matTooltip

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -9,37 +9,37 @@
 
   <nav>
     <div
-      (click)="settingsService.activeTab = 'general'"
-      [ngClass]="{ active: settingsService.activeTab === 'general' }"
+      (click)="settingsService.activeTab = 'account'"
+      [ngClass]="{ active: settingsService.activeTab === 'account' }"
     >
       <svg
-        width="16"
-        height="16"
-        viewBox="0 0 16 16"
+        width="33"
+        height="33"
+        viewBox="0 0 33 33"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
-        <g clip-path="url(#clip0_1424_1725)">
+        <g clip-path="url(#clip0_1867_1495)">
           <path
-            d="M6.69813 7.07142L1.9848 11.7848C1.86083 11.9086 1.76248 12.0556 1.69539 12.2175C1.62829 12.3794 1.59375 12.5529 1.59375 12.7281C1.59375 12.9033 1.62829 13.0768 1.69539 13.2387C1.76248 13.4005 1.86083 13.5476 1.9848 13.6714C2.23484 13.9214 2.57391 14.0618 2.92747 14.0618C3.28102 14.0618 3.6201 13.9214 3.87013 13.6714L8.58347 8.95676M11.4601 9.20009L14.0455 11.7854C14.2954 12.0355 14.4358 12.3745 14.4358 12.7281C14.4358 13.0816 14.2954 13.4207 14.0455 13.6708C13.7954 13.9207 13.4564 14.0611 13.1028 14.0611C12.7492 14.0611 12.4102 13.9207 12.1601 13.6708L8.0208 9.53209M4.4868 3.93609L3.07147 4.40676L1.65813 2.05009L2.6008 1.10742L4.95813 2.52142L4.4868 3.93609ZM4.4868 3.93609L6.37347 5.82276"
+            d="M16.5 16.5C17.9587 16.5 19.3576 15.9205 20.3891 14.8891C21.4205 13.8576 22 12.4587 22 11C22 9.54131 21.4205 8.14236 20.3891 7.11091C19.3576 6.07946 17.9587 5.5 16.5 5.5C15.0413 5.5 13.6424 6.07946 12.6109 7.11091C11.5795 8.14236 11 9.54131 11 11C11 12.4587 11.5795 13.8576 12.6109 14.8891C13.6424 15.9205 15.0413 16.5 16.5 16.5Z"
             stroke="#A5A5A5"
             stroke-linecap="round"
             stroke-linejoin="round"
           />
           <path
-            d="M6.69653 7.07163C6.13387 5.6363 6.24387 3.75296 7.40387 2.59296C8.56387 1.43296 10.7039 1.17896 11.8819 1.8863L9.8552 3.91296L9.66653 5.98696L11.7405 5.79896L13.7672 3.77163C14.4752 4.9503 14.2205 7.0903 13.0605 8.24963C11.9005 9.40963 10.0179 9.51963 8.58253 8.95696"
+            d="M6.875 27.5V26.125C6.87467 24.5011 7.28521 22.9035 8.06841 21.481C8.85162 20.0584 9.98202 18.8571 11.3544 17.989C12.7267 17.1208 14.2965 16.614 15.9174 16.5157C17.5383 16.4174 19.1578 16.7308 20.625 17.4268M28.875 30.25L30.25 22L25.4375 24.475L23.375 22L21.3125 24.475L16.5 22L17.875 30.25H28.875Z"
             stroke="#A5A5A5"
             stroke-linecap="round"
             stroke-linejoin="round"
           />
         </g>
         <defs>
-          <clipPath id="clip0_1424_1725">
-            <rect width="16" height="16" fill="white" />
+          <clipPath id="clip0_1867_1495">
+            <rect width="33" height="33" fill="white" />
           </clipPath>
         </defs>
       </svg>
-      <span>General</span>
+      <span>Account</span>
     </div>
 
     <div
@@ -177,7 +177,7 @@
     </div> -->
   </nav>
   <div class="content-wrapper">
-    @if (settingsService.activeTab === 'general') {
+    @if (settingsService.activeTab === 'account') {
     <app-settings-general></app-settings-general>
     } @else if (settingsService.activeTab === "timers") {
     <app-settings-custom-timers
