--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,7 +8,12 @@ header {
 }
 
 .right-wrapper {
-  @include dFlex($gp: 16px);
+  @include dFlex($gp: 16px, $ai: stretch);
+
+  .svg-wrapper {
+    @include dFlex();
+    cursor: pointer;
+  }
 
   svg {
     cursor: pointer;
@@ -35,3 +40,7 @@ header {
 .fade-in-100 {
   opacity: 1;
 }
+
+// ::ng-deep .custom-tooltip {
+//   margin-top: 10px; /* Abstand für Tooltip unterhalb des Elements */
+// }
