changed theme names / sound settings drop area background color / delete custom sequence function

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -54,6 +54,11 @@
       </div>
       <div>
         <img
+          (click)="deleteSequence($index)"
+          src="assets\img\icons\magnifying-glass.svg"
+          alt="magnifying-glass"
+        />
+        <img
           src="assets\img\icons\magnifying-glass.svg"
           alt="magnifying-glass"
         />
