fixed bug isPaused boolean / enabled resetting flow sequence steps

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -15,7 +15,11 @@
       />
       <div>
         <span>{{ step.name }}</span>
-        <img src="assets\img\icons\restart.svg" alt="" />
+        <img
+          (click)="flowSequenceService.restartStep($index)"
+          src="assets\img\icons\restart.svg"
+          alt=""
+        />
       </div>
     </div>
     }
