--- a/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
+++ b/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
@@ -25,7 +25,7 @@
       }"
       class="gradient-bottom"
     ></div>
-
+    @if (flowSequenceService.currentStep) {
     <div class="timer-active">
       <div class="left">
         <app-timer></app-timer>
@@ -35,6 +35,7 @@
         <app-flow-sequence-details></app-flow-sequence-details>
       </div>
     </div>
+    }
   </main>
   <app-footer></app-footer>
 </div>
