--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -142,6 +142,40 @@
       <span>Sounds</span>
     </div>
 
+    <div
+      (click)="settingsService.activeTab = 'completed'"
+      [ngClass]="{ active: settingsService.activeTab === 'completed' }"
+    >
+      <svg
+        width="16"
+        height="16"
+        viewBox="0 0 16 16"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g clip-path="url(#clip0_1424_1398)">
+          <path
+            d="M13.3333 9.33333V2L6 3.33333V10.6667"
+            stroke="#A5A5A5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M11.3346 12.6668H12.0013C12.3549 12.6668 12.6941 12.5264 12.9441 12.2763C13.1942 12.0263 13.3346 11.6871 13.3346 11.3335V9.3335H11.3346C10.981 9.3335 10.6419 9.47397 10.3918 9.72402C10.1418 9.97407 10.0013 10.3132 10.0013 10.6668V11.3335C10.0013 11.6871 10.1418 12.0263 10.3918 12.2763C10.6419 12.5264 10.981 12.6668 11.3346 12.6668ZM4.0013 14.0002H4.66797C5.02159 14.0002 5.36073 13.8597 5.61078 13.6096C5.86083 13.3596 6.0013 13.0205 6.0013 12.6668V10.6668H4.0013C3.64768 10.6668 3.30854 10.8073 3.05849 11.0574C2.80844 11.3074 2.66797 11.6465 2.66797 12.0002V12.6668C2.66797 13.0205 2.80844 13.3596 3.05849 13.6096C3.30854 13.8597 3.64768 14.0002 4.0013 14.0002Z"
+            stroke="#A5A5A5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </g>
+        <defs>
+          <clipPath id="clip0_1424_1398">
+            <rect width="16" height="16" fill="white" />
+          </clipPath>
+        </defs>
+      </svg>
+      <span>Completed Sequences</span>
+    </div>
+
     <!-- <div
       (click)="settingsService.activeTab = 'coffee'"
       [ngClass]="{ active: settingsService.activeTab === 'coffee' }"
@@ -187,6 +221,8 @@
     <app-settings-themes></app-settings-themes>
     }@else if (settingsService.activeTab === 'sounds') {
     <app-settings-sound></app-settings-sound>
+    }@else if (settingsService.activeTab === 'completed') {
+    <app-settings-completed-sequences></app-settings-completed-sequences>
     }
   </div>
 </section>
