completed Sequence model and logic in component / save and load in settings

--- a/src/app/settings/components/settings-base/settings-base.component.scss
+++ b/src/app/settings/components/settings-base/settings-base.component.scss
@@ -83,7 +83,8 @@ nav {
   flex-grow: 1;
   width: 100%;
 
-  app-settings-general {
+  app-settings-general,
+  app-settings-completed-sequences {
     display: flex;
     flex-grow: 1;
   }
