added trash icon to delete flow sequence

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -55,7 +55,7 @@
       <div>
         <img
           (click)="deleteSequence($index)"
-          src="assets\img\icons\magnifying-glass.svg"
+          src="assets\img\icons\dumpster.svg"
           alt="magnifying-glass"
         />
         <img
