edit flow sequence implemented

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -65,7 +65,7 @@
         <app-simple-settings-button
           [content]="'Edit'"
           [style]="'secondary'"
-          (submitEvent)="editSequence()"
+          (submitEvent)="editSequence(sequence)"
         ></app-simple-settings-button>
         <app-simple-settings-button
           [content]="'Choose'"
