flow sequence preview component

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="sequence-box">
-    @for (step of flowSequenceService.activeFlowSequence.steps; track $index) {
+    @for (step of flowSequence.steps; track $index) {
 
     <div class="step-wrapper">
       <img
@@ -51,8 +51,8 @@
     </svg>
 
     <div class="progress-container">
-      @for (step of flowSequenceService.activeFlowSequence.steps ; track $index)
-      { @if (step.type === 'flowTime') {
+      @for (step of flowSequence.steps ; track $index) { @if (step.type ===
+      'flowTime') {
       <div
         [ngStyle]="
           step.complete
@@ -128,4 +128,7 @@
       </svg>
     </div>
   </div>
+  @if (preview) {
+  <button>Choose</button>
+  }
 </section>
