--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -59,6 +59,7 @@
           alt="magnifying-glass"
         />
         <img
+          (click)="viewSequence(sequence)"
           src="assets\img\icons\magnifying-glass.svg"
           alt="magnifying-glass"
         />
