--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -135,3 +135,5 @@
 
 @if (settingsService.settingsOpen) {
 <app-settings-overlay></app-settings-overlay>}
+@if(settingsService.previewOpen){<app-preview-overlay></app-preview-overlay>
+}
