activeFlowSequence changed to signal / effect in flow-sequence-details.component

--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -1,8 +1,8 @@
 <section>
   <p>
     {{
-      flowSequenceService.activeFlowSequence.name
-        ? flowSequenceService.activeFlowSequence.name
+      flowSequenceService.activeFlowSequence().name
+        ? flowSequenceService.activeFlowSequence().name
         : "Choose your Flow Sequence"
     }}
   </p>
