privacy policy and tos components created

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -53,8 +53,9 @@
           </button>
           <p class="px-12">
             By continuing, you agree to<br />FlowSeq&rsquo;s
-            <a routerLink="/welcome" target="_blank">Terms of Service</a> and
-            <a routerLink="/welcome" target="_blank">Privacy Policy</a>.
+            <a routerLink="/tos" target="_blank">Terms of Service</a>
+            and
+            <a routerLink="/privacy-policy" target="_blank">Privacy Policy</a>.
           </p>
         </div>
       </div>
