--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,9 @@ $interface-accent-1-extra-light: rgb(243, 205, 223);
 
 $interface-accent-2: rgb(253, 52, 147);
 
-$scrollbar-background: rgba(0, 0, 0, 0.15);
+$standard-accent: rgba(106, 158, 157, 1);
+
+$scrollbar-background: rgba(233, 233, 233, 1);
 
 /* FONTS */ /* rubik-300 - latin */
 @font-face {
