sequence complete component

--- a/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
+++ b/src/app/home/components/flow-sequence-timer/flow-sequence-timer.component.html
@@ -33,6 +33,7 @@
       </div>
       <div class="right">
         <app-flow-sequence-details></app-flow-sequence-details>
+        <app-sequence-complete></app-sequence-complete>
       </div>
     </div>
     }
