--- a/src/app/home/components/media-controls/media-controls.component.html
+++ b/src/app/home/components/media-controls/media-controls.component.html
@@ -59,6 +59,7 @@
     (click)="play()"
     (mouseenter)="setHoverd(true, 'play')"
     (mouseleave)="setHoverd(false, 'play')"
+    [ngClass]="flowSequenceService.sequenceComplete ? 'disabled' : ''"
     class="play-pause"
     width="22"
     height="26"
@@ -122,6 +123,7 @@
     (click)="next()"
     (mouseenter)="setHoverd(true, 'next')"
     (mouseleave)="setHoverd(false, 'next')"
+    [ngClass]="flowSequenceService.sequenceComplete ? 'disabled' : ''"
     class="chapter-img"
     width="23"
     height="26"
