--- a/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.scss
+++ b/src/app/shared/components/login-info-base/privacy-policy/privacy-policy.component.scss
@@ -2,8 +2,56 @@
 @import "./../../../../../styles.scss";
 
 .wrapper {
-  @include dFlex($ai: flex-start, $gp: 64px);
   @include glassStyle();
   padding: 80px;
   border-radius: 24px;
+}
+
+.content-wrapper {
+  @include dFlex($jc: flex-start, $ai: flex-start, $gp: 32px);
+  flex-direction: column;
+  max-width: 700px;
+  max-height: 500px;
+  padding-right: 16px;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $scrollbar-background;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $standard-accent;
+    border-radius: 4px;
+  }
+}
+
+h1 {
+  color: $copy-light;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+h2 {
+  color: $copy-light;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+h3 {
+  color: $copy-light;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+p,
+li,
+a {
+  color: $copy-light;
+  font-size: 16px;
+  font-weight: 400;
 }
